--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.8.4",
+    "@tanstack/react-query-devtools": "^5.8.4",
+    "@tanstack/react-query-next-experimental": "^5.8.4",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18"
