--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@zag-js/avatar": "^0.30.0",
     "@zag-js/react": "^0.30.0",
+    "date-fns": "^2.30.0",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18"
