--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.10.0",
+    "@tanstack/react-query-next-experimental": "^5.10.0",
     "@zag-js/avatar": "^0.30.0",
     "@zag-js/react": "^0.30.0",
     "date-fns": "^2.30.0",
