--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@zag-js/avatar": "^0.30.0",
     "@zag-js/react": "^0.30.0",
     "date-fns": "^2.30.0",
-    "next": "14.0.3",
+    "next": "^14.0.4",
     "react": "^18",
     "react-dom": "^18"
   },
